--- a/index.html
+++ b/index.html
@@ -1,33 +1,128 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HSE Mobile Checklist</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HSE Checklist Report - Metronor and BAS</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background: #f0f2f5;
+      font-family: 'Segoe UI', sans-serif;
+      padding: 20px;
+    }
+    .checklist-card {
+      background: #fff;
+      border-radius: 8px;
+      padding: 15px;
+      margin-bottom: 15px;
+      display: flex;
+      align-items: flex-start;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .check-icon {
+      width: 25px;
+      height: 25px;
+      border: 2px solid gray;
+      border-radius: 4px;
+      margin-right: 15px;
+      flex-shrink: 0;
+      cursor: pointer;
+    }
+    .check-icon.checked {
+      background-color: #007bff;
+      border-color: #007bff;
+    }
+    .check-icon.checked::after {
+      content: '\2713';
+      display: block;
+      color: white;
+      text-align: center;
+      font-size: 16px;
+      line-height: 21px;
+    }
+    .note-area {
+      margin-top: 8px;
+    }
+    .btn-main {
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
-    <h1>HSE Mobile Checklist</h1>
-    <div id="checklist" class="checklist">
-      <div class="item" onclick="toggleCheck(this)">
-        <span class="checkbox"></span>
-        <p>Ensure all emergency exits are free of obstructions</p>
-      </div>
-      <div class="item" onclick="toggleCheck(this)">
-        <span class="checkbox"></span>
-        <p>Fire extinguishers are inspected and up to date</p>
-      </div>
-      <div class="item" onclick="toggleCheck(this)">
-        <span class="checkbox"></span>
-        <p>Trip hazards or cable hazards are cleared</p>
-      </div>
+    <h3 class="text-primary text-center mb-4">HSE CHECKLIST REPORT<br><small class="text-muted">Metronor and BAS</small></h3>
+
+    <div class="mb-3">
+      <label for="inspector" class="form-label">Inspector Name</label>
+      <input type="text" class="form-control" id="inspector" placeholder="Enter name...">
     </div>
-    <textarea id="notes" placeholder="Additional Notes..."></textarea>
-    <button onclick="downloadChecklist()">📥 Download</button>
-    <button onclick="shareChecklist()">📤 Share via Email</button>
+
+    <div id="checklist"></div>
+
+    <div class="mb-3">
+      <label for="fireNotes" class="form-label">Fire Routine Notes</label>
+      <textarea id="fireNotes" class="form-control" rows="2"></textarea>
+    </div>
+
+    <div class="mb-3">
+      <label for="comments" class="form-label">Additional Comments</label>
+      <textarea id="comments" class="form-control" rows="3"></textarea>
+    </div>
+
+    <button class="btn btn-primary w-100 btn-main" onclick="generatePDF()">📄 Download Report</button>
+    <button class="btn btn-info w-100 btn-main" onclick="shareEmail()">✉️ Share via Email</button>
   </div>
-  <script src="script.js"></script>
+
+  <script>
+    const items = [
+      "Are escape routes clear",
+      "Good lighting",
+      "Fire extinguishers inspected",
+      "Fire hydrant accessible and not expired (9 total: BAS 4, Metronor 5)",
+      "Trip hazards or cable hazards are cleared",
+      "Chemical safety is ensured (labels, smell, PPE use)",
+      "Hygiene equipment is available (sanitizer, soap, wipes)",
+      "Office emergency exit map is correct and visible",
+      "Protective gear is properly located and available",
+      "T5 truck routines are followed and logged",
+      "Chemical register is updated to latest version",
+      "First aid kit is stocked and not expired"
+    ];
+
+    const container = document.getElementById("checklist");
+    items.forEach((label, index) => {
+      container.innerHTML += `
+        <div class="checklist-card">
+          <div class="check-icon" onclick="toggleCheck(this)"></div>
+          <div style="flex-grow:1">
+            <strong>${label}</strong>
+            <textarea class="form-control note-area" rows="1" placeholder="Notes..."></textarea>
+          </div>
+        </div>`;
+    });
+
+    function toggleCheck(el) {
+      el.classList.toggle('checked');
+    }
+
+    function generatePDF() {
+      alert("Download functionality will go here. (Use html2pdf.js or print to PDF)");
+    }
+
+    function shareEmail() {
+      const name = document.getElementById("inspector").value;
+      const notes = document.getElementById("comments").value;
+      let mailBody = `HSE Checklist completed by ${name}\n\n`;
+      document.querySelectorAll('.checklist-card').forEach((card, idx) => {
+        const checked = card.querySelector('.check-icon').classList.contains('checked');
+        const text = items[idx];
+        const note = card.querySelector('textarea').value;
+        mailBody += `\n${checked ? '[X]' : '[ ]'} ${text}\nNote: ${note}`;
+      });
+      mailBody += `\n\nComments: ${notes}`;
+      window.location.href = `mailto:?subject=HSE Report&body=${encodeURIComponent(mailBody)}`;
+    }
+  </script>
 </body>
 </html>
